# khadijarecipes

./: .gitignore  .pre-commit-config.yaml  README.md  ingredients.md  pyproject.toml
config/: db.py  settings.py  translation.py  urls.py
core/: admin.py  context_processors.py  feeds.py  middleware.py  models.py  sitemaps.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_faq_delete_dummymodel.py
core/templates/: base.html  error.html  home.html  privacy.html  robots.txt  terms.html
data/: beef_tartare.json  chermoula.json  chocolate_mousse.json  confit_tomatoes.json  coral_chips.json  couscous.json  dates_ball.json  elderflower.json  ingredients_units.json  naan.json  olive_tapenade.json  pistachio_tiramisu.json  pumpkin_seeds.json  pumpkin_soup.json  pumpkin_spread.json  salmon_noilly_prat.json  salmon_tartare.json  sponge.json  spring_cookie.json  strudel_dough.json  tomato_relish.json  turkish_pita.json  wasabi_mayonnaise.json
data/almond_feta/: almond feta  Khadija Blog.md  feta aux amandes  Khadija Blog.md  mandel feta  Khadija Blog.md
data/beef_tartare/: Beef tartare with trüffle  Khadija Blog.md  Rindstatar mit Trüffel  Khadija Blog.md  Tartare de bœuf à la truffe  Khadija Blog.md
data/chermoula/: Marokkanische soße Chermoula  Khadija Blog.md  Moroccan sauce Chermoula  Khadija Blog.md  Sauce marocaine Chermoula  Khadija Blog.md
data/chocolate_mousse/: Mousse au chocolat végétalienne  Khadija Blog.md  Vegan Mousse au chokolat  Khadija Blog.md  Vegan chocolate mousse  Khadija Blog.md
data/confit_tomatoes/: Confierte Tomaten  Khadija Blog.md  (+2 more)
private/: kh_blog.json
products/: admin.py  models.py  urls.py  views.py
recipes/: admin.py  models.py  urls.py  views.py
shell/: compilemessages.sh  deploy-full.sh  deploy.sh  makemessages.sh
(+94 files in other folders)
