[project]
name = "khadijarecipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.52",
    "deepl>=1.23.0",
    "djade>=1.6.0",
    "django>=6.0a1",
    "django-browser-reload>=1.21.0",
    "django-cleanup>=9.0.0",
    "django-debug-toolbar>=6.0.0",
    "django-imagekit>=6.0.0",
    "django-rosetta>=0.10.2",
    "django-storages>=1.14.6",
    "django-watchfiles>=1.4.0",
    "djlint>=1.36.4",
    "environs>=14.3.0",
    "gunicorn>=23.0.0",
    "hiredis>=3.3.0",
    "huey>=2.5.4",
    "ipdb>=0.13.13",
    "pillow>=11.3.0",
    "polib>=1.2.0",
    "pre-commit>=4.3.0",
    "pyclean>=3.1.0",
    "redis>=7.0.0",
    "whitenoise[brotli]>=6.11.0",
]
